--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
       content:"";display:inline-block;width:8px;height:8px;border-radius:50%;background:var(--ring);
       box-shadow:0 0 0 3px #eef2ff; /* subtle ring */
     }
-
     footer{text-align:center;font-size:.9rem;opacity:.85;margin:40px 0 24px}
+    .chips{display:flex;flex-wrap:wrap;gap:6px;margin-top:8px}
+    .chip{font-size:.82rem;padding:4px 8px;border:1px solid var(--line);border-radius:999px;background:#fff}
+    .actions{margin-top:12px;display:flex;gap:8px;flex-wrap:wrap}
+    .btn-sm{padding:8px 10px;border-radius:10px;border:1px solid var(--line);display:inline-block}
+</style>
   </style>
 </head>
 <body>
@@ -92,28 +96,78 @@
     </section>
 
     <!-- PROJECTS -->
-    <section>
-      <h2>Selected Projects</h2>
-      <div class="grid">
-        <a class="card" href="https://github.com/alpersager/othello-cpp">
-          <div class="title">Othello in C++ (TDD)</div>
-          <div class="desc">Game logic, move validation, and unit testing with <code>test.cpp</code>.</div>
-          <div class="meta">C++ · STL · Unit Testing</div>
-        </a>
+   <section>
+  <h2>Selected Projects</h2>
 
-        <a class="card" href="https://github.com/alpersager/avr-assembly-labs">
-          <div class="title">AVR8 Assembly Labs</div>
-          <div class="desc">Low-level I/O, timers, and interrupt-driven embedded programs.</div>
-          <div class="meta">AVR · Assembly · Embedded Systems</div>
-        </a>
-
-        <a class="card" href="https://github.com/alpersager/mini-db-cpp">
-          <div class="title">Mini Database (C++)</div>
-          <div class="desc">In-memory records, indexing and a simple query engine.</div>
-          <div class="meta">C++ · Data Structures</div>
-        </a>
+  <div class="grid">
+    <!-- OTHELLO -->
+    <div class="card">
+      <div class="title">Othello in C++ (TDD)</div>
+      <div class="desc">
+        Complete game engine with legal-move generation, flips, score tracking and pass logic.
       </div>
-    </section>
+      <ul style="margin:10px 0 0 18px;line-height:1.45">
+        <li>Board as bitboard + fast neighbor scanning</li>
+        <li>Deterministic unit tests in <code>test.cpp</code> (TDD)</li>
+        <li>Clear API: <code>canPlay()</code>, <code>applyMove()</code>, <code>validMoves()</code></li>
+        <li>Focus on correctness & simplicity</li>
+      </ul>
+      <div class="chips">
+        <span class="chip">C++</span>
+        <span class="chip">STL</span>
+        <span class="chip">Unit Testing</span>
+      </div>
+      <div class="actions">
+        <a class="btn-sm" href="https://github.com/alpersager/othello-cpp">View Repo ↗</a>
+      </div>
+    </div>
+
+    <!-- AVR ASSEMBLY -->
+    <div class="card">
+      <div class="title">AVR8 Assembly Labs</div>
+      <div class="desc">
+        Low-level programs showcasing GPIO, timers, interrupts and simple state machines on AVR.
+      </div>
+      <ul style="margin:10px 0 0 18px;line-height:1.45">
+        <li>Blink & PWM via Timer/Counter configuration</li>
+        <li>Interrupt-driven button debouncing</li>
+        <li>Modular ISR & main loop separation</li>
+        <li>Register-level documentation in comments</li>
+      </ul>
+      <div class="chips">
+        <span class="chip">AVR</span>
+        <span class="chip">Assembly</span>
+        <span class="chip">Embedded</span>
+        <span class="chip">Timers/ISR</span>
+      </div>
+      <div class="actions">
+        <a class="btn-sm" href="https://github.com/alpersager/avr-assembly-labs">View Repo ↗</a>
+      </div>
+    </div>
+
+    <!-- MINI DB -->
+    <div class="card">
+      <div class="title">Mini Database (C++)</div>
+      <div class="desc">
+        In-memory records with simple indexing and a tiny query engine for select/filter/sort.
+      </div>
+      <ul style="margin:10px 0 0 18px;line-height:1.45">
+        <li>Record model + in-memory store</li>
+        <li>Index by key for O(1)/O(log n) lookups</li>
+        <li>Query pipeline: filter → map → sort</li>
+        <li>Clean separation: storage vs. query layer</li>
+      </ul>
+      <div class="chips">
+        <span class="chip">C++</span>
+        <span class="chip">Data Structures</span>
+        <span class="chip">Indexes</span>
+      </div>
+      <div class="actions">
+        <a class="btn-sm" href="https://github.com/alpersager/mini-db-cpp">View Repo ↗</a>
+      </div>
+    </div>
+  </div>
+</section>
 
     <footer>
       <hr class="divider">
