--- a/index.html
+++ b/index.html
@@ -65,6 +65,29 @@
     .chip{font-size:.82rem;padding:4px 8px;border:1px solid var(--line);border-radius:999px;background:#fff}
     .actions{margin-top:12px;display:flex;gap:8px;flex-wrap:wrap}
     .btn-sm{padding:8px 10px;border-radius:10px;border:1px solid var(--line);display:inline-block}
+    .title{display:flex;align-items:center;gap:10px}
+.title .ico{
+  width:34px;height:34px;border-radius:50%;
+  display:grid;place-items:center;
+  background:#eef2ff;
+  font-size:18px;line-height:1;
+}
+.btn-primary{
+  background:#0b63c8;color:#fff;border-color:#0b63c8;
+  transition:transform .12s, box-shadow .12s, background .12s, border-color .12s;
+}
+.btn-primary:hover{
+  background:#094e9f;border-color:#094e9f;color:#fff;
+  transform:translateY(-2px);
+  box-shadow:0 10px 28px rgba(11,99,200,.24);
+}
+.card.accent-1{border-color:#dbeafe}
+.card.accent-2{border-color:#e9d5ff}
+.card.accent-3{border-color:#fde68a}
+.card.accent-1:hover{box-shadow:0 14px 32px rgba(30,64,175,.18)}
+.card.accent-2:hover{box-shadow:0 14px 32px rgba(109,40,217,.16)}
+.card.accent-3:hover{box-shadow:0 14px 32px rgba(245,158,11,.16)}
+.chip{background:#f8fafc;border-color:#e5e7eb}
 </style>
   </style>
 </head>
