--- a/index.html
+++ b/index.html
@@ -95,31 +95,32 @@
   <div class="container">
     <!-- HERO -->
     <section class="hero">
-  <h1>Alper Sager</h1>
-  <p class="tag">Computer Engineering @ <strong>RWTH Aachen</strong></p>
-  <p class="sub">AI Systems · Embedded Computing · EESTEC Leadership</p>
-  <div class="btns">
-    <a class="btn" href="https://github.com/alpersager">💻 GitHub</a>
-    <a class="btn" href="https://www.linkedin.com/in/alpersager">🔗 LinkedIn</a>
-    <a class="btn" href="/contact">✉️ Contact</a>
-  </div>
+      <h1>Alper Sager</h1>
+      <p class="tag">Computer Engineering @ <strong>RWTH Aachen</strong></p>
+      <p class="sub">AI Systems · Embedded Computing · EESTEC Leadership</p>
+      <div class="btns">
+        <a class="btn" href="https://github.com/alpersager">💻 GitHub</a>
+        <a class="btn" href="https://www.linkedin.com/in/alpersager">🔗 LinkedIn</a>
+        <!-- NEW: About link (layout bozulmadan) -->
+        <a class="btn" href="/about">ℹ️ About</a>
+        <a class="btn" href="/contact">✉️ Contact</a>
+      </div>
 
-  <!-- BADGES -->
-  <div style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap; justify-content:center">
-    <a href="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml">
-      <img src="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml/badge.svg?v=101" alt="Pages build status" />
-    </a>
-    <a href="https://github.com/alpersager/alpersager.github.io/blob/main/LICENSE">
-      <img src="https://img.shields.io/github/license/alpersager/alpersager.github.io.svg?v=101" alt="License" />
-    </a>
-    <a href="https://github.com/alpersager/alpersager.github.io/commits/main">
-      <img src="https://img.shields.io/github/last-commit/alpersager/alpersager.github.io.svg?v=101" alt="Last commit" />
-    </a>
-  </div>
-</section>
+      <!-- BADGES -->
+      <div style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap; justify-content:center">
+        <a href="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml">
+          <img src="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml/badge.svg?v=101" alt="Pages build status" />
+        </a>
+        <a href="https://github.com/alpersager/alpersager.github.io/blob/main/LICENSE">
+          <img src="https://img.shields.io/github/license/alpersager/alpersager.github.io.svg?v=101" alt="License" />
+        </a>
+        <a href="https://github.com/alpersager/alpersager.github.io/commits/main">
+          <img src="https://img.shields.io/github/last-commit/alpersager/alpersager.github.io.svg?v=101" alt="Last commit" />
+        </a>
+      </div>
+    </section>
 
-<hr class="divider">
-
+    <hr class="divider">
 
     <!-- INTRO -->
     <section>
