--- a/index.html
+++ b/index.html
@@ -194,12 +194,14 @@
     </section>
 
     <footer>
-      <hr class="divider">
-      © 2025 <strong>Alper Sager</strong> · RWTH Aachen University ·
-      <a href="mailto:alper.sager@rwth-aachen.de">alper.sager@rwth-aachen.de</a> ·
-      <a href="https://www.linkedin.com/in/alpersager">LinkedIn</a> ·
-      <a href="https://github.com/alpersager">GitHub</a>
-    </footer>
+  <hr class="divider">
+  © 2025 <strong>Alper Sager</strong> · RWTH Aachen University ·
+  <a href="mailto:alper.sager@rwth-aachen.de">alper.sager@rwth-aachen.de</a> ·
+  <a href="/about">About</a> ·
+  <a href="https://www.linkedin.com/in/alpersager" target="_blank" rel="noopener">LinkedIn</a> ·
+  <a href="https://github.com/alpersager" target="_blank" rel="noopener">GitHub</a>
+</footer>
+
   </div>
 </body>
 </html>
