--- a/index.html
+++ b/index.html
@@ -91,6 +91,107 @@
     .chip{background:#f8fafc;border-color:#e5e7eb}
   </style>
 </head>
+<style>
+    :root{
+      --rwth-1:#003366;  /* deep RWTH blue */
+      --rwth-2:#004b8d;  /* lighter RWTH blue */
+      --text:#0f172a;    /* slate-900 */
+      --muted:#64748b;   /* slate-500 */
+      --line:#e5e7eb;    /* gray-200 */
+      --bg:#ffffff;
+      --card:#ffffff;
+      --ring:#dbeafe;    /* blue-100 */
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+    a{color:#0b63c8;text-decoration:none}
+    a:hover{opacity:.9;text-decoration:underline}
+    .container{max-width:1000px;margin:0 auto;padding:32px 20px}
+    h1,h2{letter-spacing:.2px}
+    h1{font-size:2.4rem;line-height:1.15;margin:6px 0 8px;color:var(--rwth-1);text-align:center}
+    h2{font-size:1.35rem;color:var(--rwth-2);margin:28px 0 10px;border-bottom:2px solid var(--line);padding-bottom:6px}
+
+    /* HERO */
+    .hero{
+      display:flex;flex-direction:column;align-items:center;text-align:center;
+      margin:8px 0 20px; padding:28px 0 24px;
+      background:linear-gradient(180deg, #f8fafc 0%, #ffffff 100%);
+      border:1px solid var(--line); border-radius:16px;
+    }
+    .tag{margin:0;color:var(--muted);font-weight:500}
+    .sub{margin:8px 0 0;font-style:italic;opacity:.9}
+    .btns{margin-top:16px;display:flex;gap:10px;flex-wrap:wrap;justify-content:center}
+    .btn{
+      display:inline-block;padding:10px 14px;border-radius:999px;border:1px solid var(--line);
+      background:var(--card);transition:transform .12s, box-shadow .12s, border-color .12s;
+    }
+    .btn:hover{transform:translateY(-1px);box-shadow:0 8px 24px rgba(0,0,0,.06);border-color:#cbd5e1}
+
+    /* SECTIONS */
+    .lead{font-size:1.05rem;opacity:.95}
+    .divider{margin:22px 0;border:none;border-top:1px solid var(--line)}
+
+    /* PROJECT GRID */
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(270px,1fr));gap:18px;margin-top:12px}
+    .card{
+      background:var(--card);border:1px solid var(--line);border-radius:16px;padding:16px;
+      box-shadow:0 2px 0 rgba(0,0,0,.02);transition:transform .14s, box-shadow .14s,border-color .14s;
+    }
+    .card:hover{transform:translateY(-3px);box-shadow:0 12px 32px rgba(0,0,0,.10);border-color:#cbd5e1}
+    .title{font-weight:600;margin-bottom:6px}
+    .desc{color:#334155;font-size:.98rem}
+    .meta{margin-top:8px;font-size:.9rem;color:#334155;display:flex;align-items:center;gap:6px}
+    .meta::before{
+      content:"";display:inline-block;width:8px;height:8px;border-radius:50%;background:var(--ring);
+      box-shadow:0 0 0 3px #eef2ff;
+    }
+
+    /* Chips, small buttons, footer */
+    footer{text-align:center;font-size:.9rem;opacity:.85;margin:40px 0 24px}
+    .chips{display:flex;flex-wrap:wrap;gap:6px;margin-top:8px}
+    .chip{font-size:.82rem;padding:4px 8px;border:1px solid var(--line);border-radius:999px;background:#fff}
+    .actions{margin-top:12px;display:flex;gap:8px;flex-wrap:wrap}
+    .btn-sm{padding:8px 10px;border-radius:10px;border:1px solid var(--line);display:inline-block}
+
+    /* Visual boost */
+    .title{display:flex;align-items:center;gap:10px}
+    .title .ico{
+      width:34px;height:34px;border-radius:50%;
+      display:grid;place-items:center;background:#eef2ff;font-size:18px;line-height:1;
+    }
+    .btn-primary{background:#0b63c8;color:#fff;border-color:#0b63c8;transition:transform .12s, box-shadow .12s, background .12s, border-color .12s}
+    .btn-primary:hover{background:#094e9f;border-color:#094e9f;color:#fff;transform:translateY(-2px);box-shadow:0 10px 28px rgba(11,99,200,.24)}
+    .card.accent-1{border-color:#dbeafe}
+    .card.accent-2{border-color:#e9d5ff}
+    .card.accent-3{border-color:#fde68a}
+    .card.accent-1:hover{box-shadow:0 14px 32px rgba(30,64,175,.18)}
+    .card.accent-2:hover{box-shadow:0 14px 32px rgba(109,40,217,.16)}
+    .card.accent-3:hover{box-shadow:0 14px 32px rgba(245,158,11,.16)}
+    .chip{background:#f8fafc;border-color:#e5e7eb}/* ABOUT TABLO DÜZENİ */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 12px;
+}
+
+th, td {
+  border: 1px solid #e5e7eb;
+  padding: 8px 12px;
+  text-align: left;
+  vertical-align: top;
+}
+
+thead th {
+  background: #f8fafc;
+  font-weight: 600;
+}
+
+tbody tr:nth-child(even) {
+  background: #f9fafb;
+}
+
+  </style>
+</head> 
 <body>
   <div class="container">
     <!-- HERO -->
