--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@ tbody tr:nth-child(even) {
 </head> 
 <body>
   <div class="container">
+    <!-- PROFILE PHOTO -->
+    <div style="text-align:center; margin: 32px 0;">
+      <img src="/images/profile.png" alt="Alper Sager"
+           style="width:150px; height:150px; border-radius:50%; object-fit:cover;
+                  box-shadow:0 4px 16px rgba(0,0,0,.15); border:3px solid #fff;" />
+    </div>
+
+    
     <!-- HERO -->
     <section class="hero">
       <h1>Alper Sager</h1>
