--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ tbody tr:nth-child(even) {
   <div class="container">
     <!-- PROFILE PHOTO -->
     <div style="text-align:center; margin: 32px 0;">
-      <img src="/images/profile.jpg" alt="Alper Sager"
+      <img src="/images/alpersager.jpeg" alt="Alper Sager"
            style="width:150px; height:150px; border-radius:50%; object-fit:cover;
                   box-shadow:0 4px 16px rgba(0,0,0,.15); border:3px solid #fff;" />
     </div>
