--- a/index.html
+++ b/index.html
@@ -216,18 +216,21 @@ tbody tr:nth-child(even) {
       </div>
 
       <!-- BADGES -->
-      <div style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap; justify-content:center">
-        <a href="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml">
-          <img src="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml/badge.svg?v=101" alt="Pages build status" />
-        </a>
-        <a href="https://github.com/alpersager/alpersager.github.io/blob/main/LICENSE">
-          <img src="https://img.shields.io/github/license/alpersager/alpersager.github.io.svg?v=101" alt="License" />
-        </a>
-        <a href="https://github.com/alpersager/alpersager.github.io/commits/main">
-          <img src="https://img.shields.io/github/last-commit/alpersager/alpersager.github.io.svg?v=101" alt="Last commit" />
-        </a>
-      </div>
-    </section>
+<div style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap; justify-content:center">
+  <a href="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml">
+    <img src="https://github.com/alpersager/alpersager.github.io/actions/workflows/pages/pages-build-deployment.yml/badge.svg?v=102" alt="Pages build status" />
+  </a>
+
+  <!-- LICENSE BADGE (manual MIT) -->
+  <a href="https://github.com/alpersager/alpersager.github.io/blob/main/LICENSE">
+    <img src="https://img.shields.io/badge/license-MIT-green.svg?v=102" alt="License: MIT" />
+  </a>
+
+  <a href="https://github.com/alpersager/alpersager.github.io/commits/main">
+    <img src="https://img.shields.io/github/last-commit/alpersager/alpersager.github.io.svg?v=102" alt="Last commit" />
+  </a>
+</div>
+
 
     <hr class="divider">
 
